'work_rules_updated'

--- a/posts/content/2024/11/《重新定义团队：谷歌如何工作》.md
+++ b/posts/content/2024/11/《重新定义团队：谷歌如何工作》.md
@@ -6,7 +6,7 @@ tags: [随笔]
 layout: null
 ---
 # 《重新定义团队：谷歌如何工作》
-
+作者：[埃里克·施密特](https://www.google.com/search?q=%E5%9F%83%E9%87%8C%E5%85%8B%C2%B7%E6%96%AF%E5%AF%86%E7%89%B9)
 摘抄：
 1. 在我们每周的TGIF(感谢上帝，今天是周五)全员会议中，拉里和谢尔盖主持会议，向全公司的员工（数千人在现场或通过视频参加会议，另有数万人在网上看直播）通报过去一周的最新情况，做产品展示，欢迎新员工。而会上最重要的是30min的现场问答时间，公司里面的任何员工都是可以提问，问题类型也不设限。
 
@@ -23,6 +23,28 @@ layout: null
 -> 这是一个很有意思的营销方法。
 -> 如果进入到这个里面，解题，然后可以分享给其他一些人来答题，那么是非常有趣的，而且可以快速传播。
 
-![Google的广告牌谜题](/assets/images/google-billboard-puzzle.jpg)
+<div style="text-align: center;">
+  <img src="/assets/images/google-billboard-puzzle.jpg" alt="Google的广告牌谜题" style="transform: rotate(90deg); max-width: 500px; margin: 20px auto;">
+</div>
 
-![Google的网站谜题](/assets/images/google-website-puzzle.jpg)
+<div style="text-align: center;">
+  <img src="/assets/images/google-website-puzzle.jpg" alt="Google的网站谜题" style="transform: rotate(90deg); max-width: 500px; margin: 20px auto;">
+</div>
+
+第四章：谷歌寻找人才的多元化体系。
+
+这一章主要在写谷歌的寻找人才的方式。整篇在核心讲，谷歌愿意去花费更高的成本，去寻找顶尖的人才。而且方式由最开始的推荐人才，到建立自己内部的人才资源库。以及很多其他的方式。由内部人员讲谁是自己认识的顶尖的人才，然后由谷歌的人力资源部门去进行联系。这一点和Apple公司的人才招聘方式也有很大的相似之处。
+
+> 越疯狂越好。  
+
+第五章：谷歌与众不同的招聘流程
+
+> 可以在招聘面试者的时候，给所有进来的面试者一杯温咖啡。
+
+> 最奢侈的事情莫过于不但能够建立深度专业化的领域，而且在这些领域中我们还能确保随时补充新鲜血液，加入非专家的想法。
+
+> 在谷歌，我们不希望员工成为“专家”，我们希望他们成为“通才”。
+
+> 面试官通过4次面试就可以有86%的自信确定是否聘用某个人，4次面试后的每一次面试仅可提高1%的效用，所以不值得为此浪费谷歌人的时间，又让应聘者饱受煎熬。
+
+谷歌的一次招聘，会由专业的人力部门、相应部门的领导、相应部门的下属、毫不相关的同事，进行全方面综合性的面试，从而确保高质量的招聘。
